//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  phone_number String [unique, not null]
  user_type UserType [not null]
  name String
  password_hash String
  is_locked Boolean [not null, default: false]
  association_id Int
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  association associations
  tokens user_tokens [not null]
  Driver drivers
  assigned_route_assignments route_assignments [not null]
  approved_route_assignments route_assignments [not null]
  driver_payments_created driver_payments [not null]
}

Table user_tokens {
  id Int [pk, increment]
  user_id Int [not null]
  token_hash String [not null]
  expires_at DateTime [not null]
  revoked Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user users [not null]
}

Table revoked_tokens {
  jti String [pk]
  user_id Int [not null]
  expires_at DateTime [not null]
}

Table associations {
  id Int [pk, increment]
  name String [not null]
  phone_number String
  logo String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  users users [not null]
  owners owners [not null]
  drivers drivers [not null]
  vehicles vehicles [not null]
  route_quotas route_quotas [not null]
  route_assignments route_assignments [not null]
  payment_policy association_policies
  driver_payments driver_payments [not null]
}

Table owners {
  id Int [pk, increment]
  association_id Int [not null]
  full_name String [not null]
  phone_number String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  association associations [not null]
  vehicles vehicles [not null]

  indexes {
    (association_id, phone_number) [unique]
  }
}

Table drivers {
  id Int [pk, increment]
  user_id Int [unique, not null]
  association_id Int [not null]
  full_name String [not null]
  license_no String
  license_expiry DateTime
  phone_number String [not null]
  status DriverStatus [not null, default: 'ACTIVE']
  has_smartphone Boolean [not null, default: true]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  active_until_date DateTime
  interest_accrued Decimal [not null, default: 0]
  last_accrual_date DateTime
  last_accrual_amount Decimal
  user users [not null]
  association associations [not null]
  vehicle vehicles
  payments driver_payments [not null]

  indexes {
    (association_id, phone_number) [unique]
  }
}

Table vehicles {
  id Int [pk, increment]
  plate_number String [unique, not null]
  libre_no String
  owner_id Int [not null]
  association_id Int [not null]
  driver_id Int [unique]
  make String
  model String
  color String
  capacity Int
  status VehicleStatus [not null, default: 'ACTIVE']
  is_weekly Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
  owner owners [not null]
  association associations [not null]
  driver drivers
  RouteAssignment route_assignments [not null]
}

Table route_groups {
  id Int [pk, increment]
  route_group String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  routes routes [not null]
}

Table routes {
  id Int [pk, increment]
  route_group_id Int [not null]
  departure String [not null]
  arrival String [not null]
  kilometer Decimal
  tariff Decimal
  updated_at DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  route_group route_groups [not null]
  route_quotas route_quotas [not null]
  route_assignments route_assignments [not null]
}

Table route_quotas {
  id Int [pk, increment]
  association_id Int [not null]
  route_id Int [not null]
  start_date DateTime [not null]
  end_date DateTime [not null]
  no_vehicles Int [not null]
  remaining_vehicles Int [not null, default: 0]
  status RouteQuotaStatus [not null, default: 'Pending']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  association associations [not null]
  route routes [not null]
  assignments route_assignments [not null]
}

Table route_assignments {
  id Int [pk, increment]
  route_id Int [not null]
  vehicle_id Int [not null]
  association_id Int [not null]
  start_date DateTime [not null]
  end_date DateTime [not null]
  status RouteAssignmentStatus [not null, default: 'Pending']
  is_weekly Boolean [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  history_status RouteAssignmentHistoryStatus [default: 'WORKED']
  payment_status PaymentStatus [not null, default: 'INACTIVE']
  assigned_by_user_id Int [not null]
  approved_by_user_id Int
  approved_at DateTime
  route_quota_id Int
  route routes [not null]
  vehicle vehicles [not null]
  association associations [not null]
  route_quota route_quotas
  assigned_by users [not null]
  approved_by users
}

Table association_policies {
  id Int [pk, increment]
  association_id Int [unique, not null]
  weekly_fee Decimal [not null]
  monthly_fee Decimal [not null]
  daily_fine_percent Decimal [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  association associations [not null]
}

Table driver_payments {
  id Int [pk, increment]
  association_id Int [not null]
  driver_id Int
  created_by_user_id Int
  fee_plan FeePlan [not null]
  prepaid_qty Int [not null, default: 0]
  amount Decimal [not null]
  covered_start_date DateTime [not null]
  covered_end_date DateTime [not null]
  paid_at DateTime [default: `now()`, not null]
  payment_method PaymentMethod
  plate_number String
  association associations [not null]
  driver drivers
  creator users
}

Enum UserType {
  Superadmin
  Admin
  Association
  Driver
  Controller
}

Enum RouteQuotaStatus {
  Pending
  Fulfilled
}

Enum VehicleStatus {
  ACTIVE
  INACTIVE
  MAINTENANCE
}

Enum PaymentStatus {
  ACTIVE
  INACTIVE
}

Enum FeePlan {
  WEEKLY
  MONTHLY
}

Enum RouteAssignmentHistoryStatus {
  WORKED
  NOT_WORKED
}

Enum PaymentMethod {
  CASH
  BANK
  MOBILE
  OTHER
}

Enum RouteAssignmentStatus {
  Approved
  Pending
}

Enum DriverStatus {
  ACTIVE
  INACTIVE
}

Ref: users.association_id > associations.id [delete: Set Null]

Ref: user_tokens.user_id > users.id [delete: Cascade]

Ref: owners.association_id > associations.id [delete: Restrict]

Ref: drivers.user_id - users.id [delete: Restrict]

Ref: drivers.association_id > associations.id [delete: Restrict]

Ref: vehicles.owner_id > owners.id [delete: Restrict]

Ref: vehicles.association_id > associations.id [delete: Restrict]

Ref: vehicles.driver_id - drivers.id [delete: Set Null]

Ref: routes.route_group_id > route_groups.id [delete: Restrict]

Ref: route_quotas.association_id > associations.id [delete: Restrict]

Ref: route_quotas.route_id > routes.id [delete: Restrict]

Ref: route_assignments.route_id > routes.id [delete: Cascade]

Ref: route_assignments.vehicle_id > vehicles.id [delete: Cascade]

Ref: route_assignments.association_id > associations.id [delete: Restrict]

Ref: route_assignments.route_quota_id > route_quotas.id [delete: Set Null]

Ref: route_assignments.assigned_by_user_id > users.id [delete: Restrict]

Ref: route_assignments.approved_by_user_id > users.id [delete: Restrict]

Ref: association_policies.association_id - associations.id [delete: Cascade]

Ref: driver_payments.association_id > associations.id [delete: Cascade]

Ref: driver_payments.driver_id > drivers.id [delete: Set Null]

Ref: driver_payments.created_by_user_id > users.id [delete: Set Null]